--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,7 @@ font-family: 'Silkscreen', cursive; -horror */
   font-size: xx-large;
   color: aliceblue;
 }
+
+#intro-page background-image {
+  position: fixed;
+}
