commented out the original cards to make only the appended ones with api data show.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,6 @@ font-family: 'Silkscreen', cursive; -horror */
   color: aliceblue;
 }
 
-#intro-page background-image {
+#cardholder background-image {
   position: fixed;
 }
