--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 #cardholder {
-  background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bW92aWUlMjB0aGVhdGVyfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=400&q=60");
+  background-image: url("https://media2.dallasobserver.com/dal/imager/u/magnum/11934937/movie-theater-cred-felix-mooneram-unsplash.jpg?cb=1642542354");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -42,7 +42,7 @@ font-family: 'Lobster', cursive; -romance
 font-family: 'Silkscreen', cursive; -horror */
 
 #intro-page {
-  background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bW92aWUlMjB0aGVhdGVyfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=400&q=60");
+  background-image: url("https://media2.dallasobserver.com/dal/imager/u/magnum/11934937/movie-theater-cred-felix-mooneram-unsplash.jpg?cb=1642542354");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
